<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndApp</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_map">Map it</string>
    <string name="button_web">Web</string>
    <string name="button_select_contact">Select Contact</string>
    <string name="chooser_title">Select Which Browser You Want To Use</string>
    <string name="button_share">Share</string> 
    <string name="action_refresh">Refresh</string>
    <string name="button_httpConnTest">HttpConn</string>
    <string name="button_whatsaround">What\'s Around?</string> 
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

</resources>
