<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent" 
android:paddingTop="?android:attr/actionBarSize"
android:background="@drawable/cityscape">

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">

        <EditText android:id="@+id/edit_message"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />
        
        
    </TableRow>
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
       
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage" />
     
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_map"
        android:onClick="getMap" /> 
        
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_web"
        android:onClick="visitWeb" />
        
    </TableRow>
    
        <TableRow
        android:id="@+id/tableRow2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
       
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_share"
        android:onClick="shareIt" />
        
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_select_contact"
        android:onClick="selectContact" />  
        
                
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_httpConnTest"
        android:onClick="httpConnTest" /> 
     

        
    </TableRow>
    
     <TableRow
        android:id="@+id/tableRow3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
       
     <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_whatsaround"
        android:onClick="whatsAround" />
         
        
     </TableRow>
   
</TableLayout>
